erDiagram
    usuarios ||--|| perfiles_financieros : "tiene"
    usuarios ||--o{ transacciones : "registra"
    usuarios ||--o{ presupuestos : "configura"
    usuarios ||--o{ analisis_historial : "recibe"
    categorias ||--o{ transacciones : "clasifica"
    categorias ||--o{ presupuestos : "monitorea"
    analisis_historial ||--o{ recomendaciones_historial : "genera"

    usuarios {
        bigint id PK
        varchar nombre
        varchar email UK
        varchar password_hash
        varchar estado
        timestamp fecha_registro
    }

    perfiles_financieros {
        bigint user_id PK, FK
        numeric ingreso_mensual
        numeric nivel_endeudamiento
        varchar frecuencia_ahorro
        timestamp fecha_actualizacion
    }

    categorias {
        bigint id PK
        varchar nombre
        varchar tipo
        varchar icono
        varchar color
    }

    presupuestos {
        bigint id PK
        bigint user_id FK
        bigint categoria_id FK
        numeric monto_limite
        integer mes
        integer anio
    }

    transacciones {
        bigint id PK
        bigint user_id FK
        bigint categoria_id FK
        varchar descripcion
        double monto
        varchar tipo
        timestamp fecha
    }

    analisis_historial {
        bigint id PK
        bigint user_id FK
        numeric ingreso_mensual
        numeric nivel_endeudamiento
        varchar frecuencia_ahorro
        varchar perfil_resultado
        double probabilidad
        timestamp fecha_analisis
    }

    recomendaciones_historial {
        bigint recomendacion_id PK
        bigint analisis_historial_id FK
        varchar recomendacion_texto
    }
